test/trivial/deitz/exit.good
Error: Illegal call of module exit (exit.chpl:2)
