test/trivial/deitz/exit.chpl
writeln("good");
exit(0);
writeln("bye");
